Implemented Chatangle codec with encryption and decryption of payloads

--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
     "Chatangle"
   ],
   "author": "Peter Ryszkiewicz",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "openpgp": "^3.0.11"
+  },
+  "repository": "https://github.com/pRizz/chatangle-codec.git"
 }
