--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "dependencies": {
     "openpgp": "^3.0.11"
   },
-  "repository": "https://github.com/pRizz/chatangle-codec.git"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pRizz/chatangle-codec.git"
+  }
 }
